crates/turborepo-cli/src/cli/snapshots/turborepo_cli__cli__test__turbo---filter=web-watch-build.snap
---
source: crates/turborepo-cli/src/cli/test.rs
expression: err
---
error: unexpected argument '--filter' found

Usage: turbo [FLAGS] <SUBCOMMAND>

For more information, try '--help'.
